# claude_sandbox

./: .gitignore  LICENSE  PROGRESS.md  README.md  pyproject.toml
docs/superpowers/plans/: 2026-05-21-claude-code-sandbox.md  2026-05-23-v0.2.0.md  2026-05-23-v0.3.0.md  2026-05-23-v0.4.0.md
docs/superpowers/specs/: 2026-05-21-claude-code-sandbox-design.md  2026-05-23-v0.2.0-design.md  2026-05-23-v0.3.0-design.md  2026-05-23-v0.4.0-design.md
images/agent/: Dockerfile  entrypoint.sh
images/agent-stub/: Dockerfile  entrypoint.sh
images/db/: Dockerfile  init.sh
images/proxy/: Dockerfile  entrypoint.sh
src/sandbox/: aws.py  cli.py  compose.py  docker.py  dump.py  repo.py  session.py
src/sandbox/templates/: compose.yml.j2  squid.conf.j2
tests/: conftest.py  test_aws.py  test_cli.py  test_compose.py  test_docker.py  test_dump.py  test_repo.py  test_session.py
tests/integration/: conftest.py  test_end_to_end.py  test_isolation.py
tests/smoke/: conftest.py  test_real_claude.py
